[package]
name = "client"
version = "0.1.0"
authors = ["john <doneth7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.3"
tui = { version = "0.7.0", features = ["termion"] }
rand = "0.7.2"
failure = "0.1.6"
unicode-width = "0.1.6"
async-trait = "0.1.19"
common = { path = "../common" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
surf = { version = "1.0.3" }
async-std = { version = "1.2.0", features = ["attributes"] }
serde_json = "1.0.42"
