[package]
name = "common"
version = "0.1.0"
authors = ["john <doneth7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rand = "0.7.2"
bimap = "0.4.0"
