[package]
name = "server"
version = "0.1.0"
authors = ["john <doneth7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
rocket_contrib = "0.4.2"
uuid = { version = "*", features = ["serde", "v4"]}
common = { path = "../common" }